@@ -23,10 +23,10 @@ import step.core.timeseries.aggregation.TimeSeriesAggregationQueryBuilder;
 import step.core.timeseries.aggregation.TimeSeriesAggregationResponse;
 import step.core.timeseries.bucket.Bucket;
 import step.core.timeseries.bucket.BucketAttributes;
-import step.core.timeseries.ingestion.TimeSeriesIngestionPipeline;
 import step.core.timeseries.query.OQLTimeSeriesFilterBuilder;
-import step.plugins.measurements.Measurement;
-import step.plugins.measurements.MeasurementPlugin;
+import step.core.metrics.ExecutionMetricSample;
+import step.core.metrics.Measurement;
+import step.core.metrics.MetricsExecutionPlugin;
 import step.plugins.timeseries.api.*;
 
 import java.util.*;
@@ -36,15 +36,15 @@ import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import static step.plugins.measurements.MeasurementPlugin.ATTRIBUTE_EXECUTION_ID;
+import static step.core.timeseries.TimeSeriesConstants.ATTRIBUTES_PREFIX;
+import static step.core.timeseries.TimeSeriesConstants.TIMESTAMP_ATTRIBUTE;
+import static step.core.metrics.AbstractMetricSample.METRIC_TYPE;
+import static step.core.metrics.MetricsExecutionPlugin.ATTRIBUTE_EXECUTION_ID;
 import static step.plugins.timeseries.TimeSeriesExecutionPlugin.TIMESERIES_FLAG;
 
 public class TimeSeriesHandler {
 
-    private static final String ATTRIBUTES_PREFIX = "attributes.";
-    private static final String METRIC_TYPE_ATTRIBUTE = "metricType";
-    private static final String TIMESTAMP_ATTRIBUTE = "begin";
-    private static final List<String> MEASUREMENTS_FILTER_IGNORE_ATTRIBUTES = Arrays.asList(METRIC_TYPE_ATTRIBUTE);
+    private static final List<String> MEASUREMENTS_FILTER_IGNORE_ATTRIBUTES = List.of(METRIC_TYPE);
     private static final Function<String, String> attributesPrefixRemoval = (attribute) -> {
         if (attribute.startsWith(ATTRIBUTES_PREFIX)) {
             return attribute.replaceFirst(ATTRIBUTES_PREFIX, "");
@@ -52,39 +52,70 @@ public class TimeSeriesHandler {
             return attribute;
         }
     };
-    private final List<String> attributesWithPrefix;
+    //Ugly implementation
+    private static final List<String> executionMetricSampleBaseFields = List.of("eId","rnId","planId","plan","taskId","schedule","execution","agentUrl","origin", "metricType");
+    private static final List<String> executionMetricSampleAttributesFields = List.of("project","projectName");
+    private static final Function<String, String> attributesPrefixRemovalSamples = (attribute) -> {
+        if (attribute.startsWith(ATTRIBUTES_PREFIX)) {
+            String attributeRenamed = attribute.replaceFirst(ATTRIBUTES_PREFIX, "");
+            if (executionMetricSampleBaseFields.contains(attributeRenamed)) {
+                return attributeRenamed;
+            } else if (executionMetricSampleAttributesFields.contains(attributeRenamed)) {
+                return attribute;
+            } else if ("name".equals(attributeRenamed)){
+                return "sample.name";
+            } else {
+                return "sample.labels." + attributeRenamed;
+            }
+        } else {
+            return attribute;
+        }
+    };
+    public static final String SAMPLE_SAMPLE_TIME = "sample.sampleTime";
+    private final Set<String> includedAttributesWithPrefix;
+    private final Set<String> exclduedAttributesWithPrefix;
 
-    private final List<String> timeSeriesAttributes;
+    private final Set<String> timeSeriesIncludedAttributes;
+    private final Set<String> timeSeriesExcludedAttributes;
     private final AsyncTaskManager asyncTaskManager;
     private final TimeSeriesAggregationPipeline aggregationPipeline;
     private final TimeSeriesAggregationPipeline reportNodeAggregationPipeline;
     private final step.core.collections.Collection<Measurement> measurementCollection;
+    private final step.core.collections.Collection<ExecutionMetricSample> metricSampleCollection;
     private final ExecutionAccessor executionAccessor;
     private final TimeSeries timeSeries;
     private final int resolution;
     private final int samplingLimit;
 
     public TimeSeriesHandler(int resolution,
-                             List<String> timeSeriesAttributes,
+                             Set<String> timeSeriesIncludedAttributes,
+                             Set<String> timeSeriesExcludedAttributes,
                              step.core.collections.Collection<Measurement> measurementCollection,
+                             step.core.collections.Collection<ExecutionMetricSample> metricSampleCollection,
                              ExecutionAccessor executionAccessor,
                              TimeSeries timeSeries,
                              ReportNodeTimeSeries reportNodeTimeSeries,
                              AsyncTaskManager asyncTaskManager,
                              int samplingLimit) {
         this.resolution = resolution;
-        this.timeSeriesAttributes = timeSeriesAttributes;
+        this.timeSeriesIncludedAttributes = timeSeriesIncludedAttributes;
+        this.timeSeriesExcludedAttributes = timeSeriesExcludedAttributes;
         this.measurementCollection = measurementCollection;
+        this.metricSampleCollection = metricSampleCollection;
         this.aggregationPipeline = timeSeries.getAggregationPipeline();
         this.reportNodeAggregationPipeline = reportNodeTimeSeries.getTimeSeries().getAggregationPipeline();
         this.executionAccessor = executionAccessor;
         this.asyncTaskManager = asyncTaskManager;
         this.timeSeries = timeSeries;
         this.samplingLimit = samplingLimit;
-        this.attributesWithPrefix = this.timeSeriesAttributes
+        this.includedAttributesWithPrefix = this.timeSeriesIncludedAttributes
             .stream()
             .map(x -> ATTRIBUTES_PREFIX + x)
-            .collect(Collectors.toList());
+            .collect(Collectors.toSet());
+        this.exclduedAttributesWithPrefix = this.timeSeriesExcludedAttributes
+            .stream()
+            .map(x -> ATTRIBUTES_PREFIX + x)
+            .collect(Collectors.toSet());
     }
 
     /**
@@ -98,33 +129,52 @@ public class TimeSeriesHandler {
             .registerCollection(tsCollection)
             .build()) {
 
-            List<String> standardAttributes = new ArrayList<>(timeSeriesAttributes);
+            Set<String> standardAttributes = new HashSet<>(timeSeriesIncludedAttributes);
             standardAttributes.addAll(fields.stream().map(attributesPrefixRemoval).collect(Collectors.toList()));
             standardAttributes.addAll(request.getGroupDimensions());
-            TimeSeriesBucketingHandler timeSeriesBucketingHandler = new TimeSeriesBucketingHandler(timeSeries, standardAttributes);
+            TimeSeriesMetricSamplesHandler timeSeriesBucketingHandler = new TimeSeriesMetricSamplesHandler(timeSeries, standardAttributes, Set.of());
             LongAdder count = new LongAdder();
-            ArrayList<Filter> timestampClauses = new ArrayList<>(List.of(Filters.empty()));
-            if (request.getStart() != null) {
-                timestampClauses.add(Filters.gte(TIMESTAMP_ATTRIBUTE, request.getStart()));
+            Filter timestampClauses = Filters.empty();
+            Filter samplesTimestampClauses = Filters.empty();
+            Long start = request.getStart();
+            Long end = request.getEnd();
+            if (start != null && end != null) {
+                timestampClauses = Filters.and(List.of(Filters.gte(TIMESTAMP_ATTRIBUTE, start), Filters.lt(TIMESTAMP_ATTRIBUTE, end)));
+                samplesTimestampClauses = Filters.and(List.of(Filters.gte(SAMPLE_SAMPLE_TIME, start), Filters.lt(SAMPLE_SAMPLE_TIME, end)));
+            } else if (start != null) {
+                timestampClauses = Filters.gte(TIMESTAMP_ATTRIBUTE, start);
+                samplesTimestampClauses = Filters.gte(SAMPLE_SAMPLE_TIME, start);
+            } else if (end != null) {
+                timestampClauses = Filters.lt(TIMESTAMP_ATTRIBUTE, end);
+                samplesTimestampClauses = Filters.lt(SAMPLE_SAMPLE_TIME, end);
             }
-            if (request.getEnd() != null) {
-                timestampClauses.add(Filters.lt(TIMESTAMP_ATTRIBUTE, request.getEnd()));
-            }
-            Filter filter = Filters.and(Arrays.asList(
-                Filters.and(timestampClauses),
-                OQLTimeSeriesFilterBuilder.getFilter(request.getOqlFilter(), attributesPrefixRemoval, MEASUREMENTS_FILTER_IGNORE_ATTRIBUTES)
-            ));
+            Filter oqlFilterMeasurements = OQLTimeSeriesFilterBuilder.getFilter(request.getOqlFilter(), attributesPrefixRemoval, MEASUREMENTS_FILTER_IGNORE_ATTRIBUTES);
+            Filter oqlFilterMetricSamples = OQLTimeSeriesFilterBuilder.getFilter(request.getOqlFilter(), attributesPrefixRemovalSamples, MEASUREMENTS_FILTER_IGNORE_ATTRIBUTES);
+            Filter filterMeasurements = Filters.and(List.of(timestampClauses, oqlFilterMeasurements));
+            Filter filterMetricSamples = Filters.and(List.of(samplesTimestampClauses, oqlFilterMetricSamples));
             SearchOrder searchOrder = new SearchOrder(TIMESTAMP_ATTRIBUTE, 1);
+            SearchOrder metricsSearchOrder = new SearchOrder(SAMPLE_SAMPLE_TIME, 1);
             // Iterate over each measurement and ingest it again
-            try (Stream<Measurement> stream = measurementCollection.findLazy(filter, searchOrder, null, null, 0)) {
+            try (Stream<Measurement> stream = measurementCollection.findLazy(filterMeasurements, searchOrder, null, null, 0)) {
                 stream.forEach(measurement -> {
                     count.increment();
                     timeSeriesBucketingHandler.ingestExistingMeasurement(measurement);
                 });
             }
+            // Iterate over each metric samples and ingest it again if metricSampleCollection exists
+            if (metricSampleCollection != null) {
+                try (Stream<ExecutionMetricSample> stream = metricSampleCollection.findLazy(filterMetricSamples, metricsSearchOrder, null, null, 0)) {
+                    stream.forEach(metricSample -> {
+                        if (metricSample != null) {
+                            count.increment();
+                            timeSeriesBucketingHandler.processMetric(metricSample);
+                        }
+                    });
+                }
+            }
             timeSeriesBucketingHandler.flush();
             TimeSeriesAggregationPipeline aggregationPipeline = timeSeries.getAggregationPipeline();
-            TimeSeriesAggregationQuery query = mapToQuery(request, aggregationPipeline);
+            TimeSeriesAggregationQuery query = mapToQuery(request);
             TimeSeriesAggregationResponse response = aggregationPipeline.collect(query);
 
             return mapToApiResponse(request, response);
@@ -145,8 +195,8 @@ public class TimeSeriesHandler {
         Filter filter = OQLTimeSeriesFilterBuilder.getFilter(oqlFilter, attributesPrefixRemoval, MEASUREMENTS_FILTER_IGNORE_ATTRIBUTES);
         measurementCollection.find(filter, null, 0, samplingLimit, 0).forEach(m -> {
             m.forEach((key, value) -> {
-                if (Objects.equals(key, MeasurementPlugin.BEGIN)
-                    || Objects.equals(key, MeasurementPlugin.VALUE)
+                if (Objects.equals(key, MetricsExecutionPlugin.BEGIN)
+                    || Objects.equals(key, MetricsExecutionPlugin.VALUE)
                     || Objects.equals(key, "_id")) {
                     return;
                 }
@@ -181,42 +231,50 @@ public class TimeSeriesHandler {
             return (int) request.getIntervalSize();
         }
         int nbBuckets = Math.max(100, request.getNumberOfBuckets());
-        int calculatedResolution = (int) Math.floor((request.getEnd() - request.getStart()) / nbBuckets);
+        int calculatedResolution = (int) Math.floor((double) (request.getEnd() - request.getStart()) / nbBuckets);
         return Math.max(resolution, calculatedResolution);
     }
 
     public TimeSeriesAPIResponse getTimeSeries(FetchBucketsRequest request) {
         validateFetchRequest(request);
-        TimeSeriesAggregationQuery query = mapToQuery(request, this.aggregationPipeline);
+        TimeSeriesAggregationQuery query = mapToQuery(request);
         TimeSeriesAggregationResponse response = this.aggregationPipeline.collect(query);
         return mapToApiResponse(request, response);
     }
 
     public TimeSeriesAPIResponse getReportNodeTimeSeries(FetchBucketsRequest request) {
         validateFetchRequest(request);
-        TimeSeriesAggregationQuery query = mapToQuery(request, this.reportNodeAggregationPipeline);
+        TimeSeriesAggregationQuery query = mapToQuery(request);
         TimeSeriesAggregationResponse response = this.reportNodeAggregationPipeline.collect(query);
         return mapToApiResponse(request, response);
     }
 
     /**
-     * Gets the time series according to the provided request.
-     * If the time series doesn't exist for the provided request, builds it based on the raw measurements
+     * Gets the time series data according to the provided request.
+     * If the time series data doesn't exist for the provided request, builds it based on the raw measurements
      *
-     * @param request
-     * @return
+     * @param request {@link FetchBucketsRequest}
+     * @return {@link TimeSeriesAPIResponse}
      */
-    public TimeSeriesAPIResponse getOrBuildTimeSeries(FetchBucketsRequest request) {
+    public TimeSeriesAPIResponse fetchBucketsWithFallback(FetchBucketsRequest request) {
         validateFetchRequest(request);
 
         OQLVerifyResponse oqlVerifyResponse = this.verifyOql(request.getOqlFilter());
         if (!oqlVerifyResponse.isValid()) {
             throw new ControllerServiceException("Invalid OQL filter");
-        } else if (oqlVerifyResponse.hasUnknownFields() || !this.timeSeriesAttributes.containsAll(request.getGroupDimensions())) {
+        } else if (oqlVerifyResponse.hasUnknownFields() || hasUnknownGroupDimensions(request.getGroupDimensions())) {
             // if the filter has attributes which are not indexed, switch to RAW measurements
             return this.getTimeSeriesFromRawMeasurements(request, oqlVerifyResponse.getFields());
         } else {
             return getTimeSeries(request);
+        }
+    }
+
+    public boolean hasUnknownGroupDimensions(Set<String> groupDimensions) {
+        if (timeSeriesIncludedAttributes.isEmpty()) {
+            return groupDimensions.stream().anyMatch(timeSeriesExcludedAttributes::contains);
+        } else {
+            return !timeSeriesIncludedAttributes.containsAll(groupDimensions);
         }
     }
 
@@ -228,7 +286,12 @@ public class TimeSeriesHandler {
         if (StringUtils.isNotEmpty(oql)) {
             try {
                 oqlAttributes = new HashSet<>(OQLTimeSeriesFilterBuilder.getFilterAttributes(oql));
-                hasUnknownFields = !attributesWithPrefix.containsAll(oqlAttributes);
+                //If the time-series are defined to only support a subset of a attributes we make sure all OQL fields are covered by the TS (or ultimately fallback to RAW measurements)
+                if (!includedAttributesWithPrefix.isEmpty()) {
+                    hasUnknownFields = !includedAttributesWithPrefix.containsAll(oqlAttributes);
+                } else if (!exclduedAttributesWithPrefix.isEmpty()) {
+                    hasUnknownFields =  exclduedAttributesWithPrefix.stream().anyMatch(oqlAttributes::contains);
+                }
                 if (oqlAttributes.isEmpty()) { // there are strings like 'abcd' which is a valid OQL by some reason
                     isValid = false;
                 }
@@ -242,9 +305,7 @@ public class TimeSeriesHandler {
     public Set<String> getMeasurementsAttributes(String oqlFilter) {
         Filter filter = OQLTimeSeriesFilterBuilder.getFilter(oqlFilter, attributesPrefixRemoval, Collections.emptySet());
         Set<String> fields = new HashSet<>();
-        measurementCollection.find(filter, null, 0, samplingLimit, 0).forEach(measurement -> {
-            fields.addAll(measurement.keySet());
-        });
+        measurementCollection.find(filter, null, 0, samplingLimit, 0).forEach(measurement -> fields.addAll(measurement.keySet()));
         return fields;
     }
 
@@ -268,13 +329,13 @@ public class TimeSeriesHandler {
             // we need to check if measurements exists
             Equals measurementFilter = Filters.equals(ATTRIBUTE_EXECUTION_ID, executionId);
             Measurement firstMeasurement = measurementCollection.find(measurementFilter,
-                new SearchOrder(MeasurementPlugin.BEGIN, 1), 0, 1, 0).findFirst().orElse(null);
+                new SearchOrder(MetricsExecutionPlugin.BEGIN, 1), 0, 1, 0).findFirst().orElse(null);
             Measurement lastMeasurement = measurementCollection.find(measurementFilter,
-                new SearchOrder(MeasurementPlugin.BEGIN, -1), 0, 1, 0).findFirst().orElse(null);
+                new SearchOrder(MetricsExecutionPlugin.BEGIN, -1), 0, 1, 0).findFirst().orElse(null);
             if (firstMeasurement != null && lastMeasurement != null) {
                 return asyncTaskManager.scheduleAsyncTask(t -> {
                     // the flushing period can be a big value, because we will force flush every time.
-                    TimeSeriesBucketingHandler timeSeriesBucketingHandler = new TimeSeriesBucketingHandler(timeSeries, timeSeriesAttributes);
+                    TimeSeriesMetricSamplesHandler timeSeriesBucketingHandler = new TimeSeriesMetricSamplesHandler(timeSeries, timeSeriesIncludedAttributes, timeSeriesExcludedAttributes);
                     LongAdder count = new LongAdder();
                     SearchOrder searchOrder = new SearchOrder("begin", 1);
                     // Iterate over each measurement and ingest it again
@@ -298,7 +359,7 @@ public class TimeSeriesHandler {
         }
     }
 
-    private TimeSeriesAggregationQuery mapToQuery(FetchBucketsRequest request, TimeSeriesAggregationPipeline pipeline) {
+    private TimeSeriesAggregationQuery mapToQuery(FetchBucketsRequest request) {
         TimeSeriesAggregationQueryBuilder timeSeriesAggregationQuery = new TimeSeriesAggregationQueryBuilder()
             .range(request.getStart(), request.getEnd())
             .withFilter(Filters.and(
@@ -309,7 +370,7 @@ public class TimeSeriesHandler {
             .withGroupDimensions(request.getGroupDimensions());
         if (request.getCollectAttributeKeys() != null && !request.getCollectAttributeKeys().isEmpty()) {
             timeSeriesAggregationQuery.withAttributeCollection(request.getCollectAttributeKeys(),
-                Objects.requireNonNullElse(request.getCollectAttributesValuesLimit(), 0));
+                request.getCollectAttributesValuesLimit());
         }
         if (request.getIntervalSize() > 0) {
             timeSeriesAggregationQuery.window(request.getIntervalSize());
